# llm-coin-trader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
coin_trader/: main.py
coin_trader/broker/: live.py  live_futures.py  paper.py  paper_futures.py
coin_trader/config/: settings.py
coin_trader/core/: contracts.py  models.py
coin_trader/exchange/: base.py  binance_futures.py  upbit.py
coin_trader/execution/: engine.py  idempotency.py
coin_trader/llm/: advisory.py  codex_client.py  oauth_openai.py
coin_trader/logging/: logger.py  redaction.py
coin_trader/news/: coinness.py  summarizer.py
coin_trader/notify/: slack.py
coin_trader/risk/: limits.py  manager.py
coin_trader/safety/: kill_switch.py  monitor.py
coin_trader/security/: key_manager.py
coin_trader/state/: store.py
coin_trader/strategy/: conservative.py
coin_trader/web/: api.py
coin_trader/web/templates/: dashboard.html  login.html
docs/: getting-started.md  system-flow.md
scripts/: migrate_sqlite_to_pg.py
tests/: test_anomaly_monitor.py  test_exchange_base.py  test_execution_engine.py  test_futures_integration.py  test_idempotency.py  test_kill_switch.py  test_llm_advisory.py  test_main_async_helpers.py  test_main_helpers.py  test_models_futures.py  test_oauth_sse.py  test_paper_futures_broker.py  test_risk_manager.py  test_tick_loop.py  test_upbit_normalization.py
